$Id: ChangeLog,v 1.10 2006-12-20 10:56:53 karl Exp $

2006-01-04 Karl Lehenbauer <karl-bsd@sc.com>
    * Now that we're loading in Tcl procs as well as a C extension
      library, make the generation of the pkgIndex.tcl file be
      correct, eh?

2006-01-04 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for syslog -- yes there are other Tcl syslog interfaces,
      at least Scotty/Tnm, but we don't want to pull all that stuff in,
      and this interface is, we believe, BSD-complete.

    * configure.in, generic/bsd.c: Detect whether the setproctitle call
      is available so we can build on the BSD variant Mac OS X/Darwin.

2005-11-28 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for ::bsd::getkey to read a single key from the keybaord
      in raw mode and return the character value as an integer

2005-11-23 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for MNT_JAILDEVFS and MNT_IGNORE flags when present.

2005-11-28 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for ::bsd::getkey to read a single key from the keybaord
      in raw mode and return the character value as an integer

2005-11-23 Karl Lehenbauer <karl-bsd@sc.com>
    * Add support for MNT_JAILDEVFS and MNT_IGNORE flags when present.

2005-08-07 Karl Lehenbauer <karl-bsd@sc.com>

    * Put all commands in a "bsd" namespace
    * Export commands from "bsd" namespace
    * Add interface to setproctitle
    * Use the proper secure idiom, setproctitle("%s", string), to prevent
      stack mangling, etc.
    * Rudimentary manpage bsd.n.
    * Add support for getfsstat flags MNT_MULTILABEL (multiLabel) and
      MNT_ACLS (aclsEnabled).
