@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.10 2006-12-20 10:56:53 karl Exp $
+$Id: ChangeLog,v 1.11 2007-02-17 10:32:31 karl Exp $
+
+2007-01-17 karl
+    * Add cputime proc to calculate the CPU time used by running something,
+      like Tcl's time but uses the CPU time not elapsed real time.
 
 2006-01-04 Karl Lehenbauer <karl-bsd@sc.com>
     * Now that we're loading in Tcl procs as well as a C extension
